--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Lucky-Road.loader.js";
+        var loaderUrl = buildUrl + "/Web 7.loader.js";
         var config = {
-            dataUrl: buildUrl + "/Lucky-Road.data",
-            frameworkUrl: buildUrl + "/Lucky-Road.framework.js",
-            codeUrl: buildUrl + "/Lucky-Road.wasm",
+            dataUrl: buildUrl + "/Web 7.data",
+            frameworkUrl: buildUrl + "/Web 7.framework.js",
+            codeUrl: buildUrl + "/Web 7.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
