--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Web 16.loader.js";
+        var loaderUrl = buildUrl + "/Web-file.loader.js";
         var config = {
-            dataUrl: buildUrl + "/Web 16.data",
-            frameworkUrl: buildUrl + "/Web 16.framework.js",
-            codeUrl: buildUrl + "/Web 16.wasm",
+            dataUrl: buildUrl + "/Web-file.data",
+            frameworkUrl: buildUrl + "/Web-file.framework.js",
+            codeUrl: buildUrl + "/Web-file.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
