--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: #FFFFFF;
+            background: #006800;
         }
 
         #unity-canvas {
@@ -44,7 +44,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: #FFFFFF;
+            background: #006800;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -109,11 +109,11 @@
 
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Web 16.loader.js";
+        var loaderUrl = buildUrl + "/Web 2.loader.js";
         var config = {
-            dataUrl: buildUrl + "/Web 16.data",
-            frameworkUrl: buildUrl + "/Web 16.framework.js",
-            codeUrl: buildUrl + "/Web 16.wasm",
+            dataUrl: buildUrl + "/Web 2.data",
+            frameworkUrl: buildUrl + "/Web 2.framework.js",
+            codeUrl: buildUrl + "/Web 2.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
