-without login signup

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Web 2.loader.js";
+        var loaderUrl = buildUrl + "/Luckey Road.loader.js";
         var config = {
-            dataUrl: buildUrl + "/Web 2.data",
-            frameworkUrl: buildUrl + "/Web 2.framework.js",
-            codeUrl: buildUrl + "/Web 2.wasm",
+            dataUrl: buildUrl + "/Luckey Road.data",
+            frameworkUrl: buildUrl + "/Luckey Road.framework.js",
+            codeUrl: buildUrl + "/Luckey Road.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
