--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     </style>
 </head>
 <body>
+
     <div id="unity-container" class="unity-desktop">
         <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
     </div>
@@ -172,5 +173,10 @@
   //};
 
     </script>
+    <script>
+  window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
+
 </body>
 </html>
