--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
         </div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Web 1.loader.js";
+        var loaderUrl = buildUrl + "/6.loader.js";
         var config = {
-            dataUrl: buildUrl + "/Web 1.data",
-            frameworkUrl: buildUrl + "/Web 1.framework.js",
-            codeUrl: buildUrl + "/Web 1.wasm",
+            dataUrl: buildUrl + "/6.data",
+            frameworkUrl: buildUrl + "/6.framework.js",
+            codeUrl: buildUrl + "/6.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
