--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name='admaven-placement' content=BqdC5rHY8>
     <title>Lucky Road</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="Lucky-Road-Icon.png">
     <style>
