--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/9.loader.js";
+        var loaderUrl = buildUrl + "/lucky-road.loader.js";
         var config = {
-            dataUrl: buildUrl + "/9.data",
-            frameworkUrl: buildUrl + "/9.framework.js",
-            codeUrl: buildUrl + "/9.wasm",
+            dataUrl: buildUrl + "/lucky-road.data",
+            frameworkUrl: buildUrl + "/lucky-road.framework.js",
+            codeUrl: buildUrl + "/lucky-road.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
