--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script>
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/lucky-road-2.loader.js";
+        var loaderUrl = buildUrl + "/lucky-road.loader.js";
         var config = {
-            dataUrl: buildUrl + "/lucky-road-2.data",
-            frameworkUrl: buildUrl + "/lucky-road-2.framework.js",
-            codeUrl: buildUrl + "/lucky-road-2.wasm",
+            dataUrl: buildUrl + "/lucky-road.data",
+            frameworkUrl: buildUrl + "/lucky-road.framework.js",
+            codeUrl: buildUrl + "/lucky-road.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Lucky Road Game",
             productName: "Lucky Road",
