--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <link rel="manifest" href="manifest.json">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name='admaven-placement' content=BqdC5rHY8>
+    <script>
+  window.badwords = [
+    "fuck", "shit", "bitch", "asshole", "damn", "cunt", "dick", "bastard",
+    "pussy", "faggot", "nigger", "nigga", "slut", "whore", "twat", "cock", "tits",
+    "motherfucker", "bollocks", "wanker", "prick", "jerkoff", "jackoff", "dildo",
+    "blowjob", "handjob", "rimjob", "cum", "jizz", "spunk", "arse", "arsehole",
+    "bugger", "skank", "ho", "hoe", "tramp", "slag", "rape", "rapist", "molest",
+    "molester", "necrophilia", "bestiality", "zoophile", "beastiality", "sodomy",
+    "boner", "tit", "boob", "boobs", "nipple", "penis", "vagina", "clit", "clitoris",
+    "labia", "testicle", "ballsack", "scrotum", "anus", "rectum", "fisting",
+    "orgasm", "ejaculate", "screw", "shithead", "douche", "douchebag", "hell",
+    "goddamn", "bimbo", "slutty", "freak", "nazi", "terrorist", "hitler", "kkk",
+    "retard", "retarded", "spaz", "idiot", "moron", "imbecile", "dipshit",
+    "buttfuck", "assfuck", "shitface", "fuckface", "piss", "pissed", "crap",
+    "bastardo", "puta", "mierda", "maricon", "chingar", "coño", "puto", "zorra","ass"
+  ];
+</script>
     <title>Lucky Road</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta name="mobile-web-app-capable" content="yes">
@@ -107,10 +124,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bad-words@3.0.4/lib/badwords.min.js"></script>
-<script>
-  window.BadWordsFilter = new window.Filter();
-</script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
